<resources>
    <string name="app_name">ImageProcessing</string>
    <string name="action_OpenGallery">Open Image File</string>
    <string name="action_GrayScale">To grayscale</string>
    <string name="action_Binary">To binary</string>
    <string name="action_EqualizeHisto">Equalize Histogram</string>
    <string name="action_Gamma">Gamma correction</string>
    <string name="action_Contrast">Contrast enhancement</string>
    <string name="action_blur">Gaussian blur</string>
    <string name="action_manuallyCornerSelect">Manually corner Select</string>
    <string name="action_autoCornerSelect">Auto corner Select</string>
    <string name="action_rotate90">Rotate 90 clockwise</string>
    <string name="action_rotate270">Rotate 90 anticlockwise</string>
    <string name="action_perspectiveTransform">Perspective transform</string>
    <string name="action_resetFilters">Reset image filters</string>
</resources>
