<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_openGallery"
        app:showAsAction="never"
        android:title="@string/action_OpenGallery"/>
    <item
        android:id="@+id/action_grayscale"
        app:showAsAction="never"
        android:title="@string/action_GrayScale"/>
    <item
        android:id="@+id/action_binary"
        app:showAsAction="never"
        android:title="@string/action_Binary"/>
    <item
        android:id="@+id/action_contrast"
        app:showAsAction="never"
        android:title="@string/action_Contrast"/>
    <item
        android:id="@+id/action_gamma"
        app:showAsAction="never"
        android:title="@string/action_Gamma"/>
    <item
        android:id="@+id/action_equalizehisto"
        app:showAsAction="never"
        android:title="@string/action_EqualizeHisto"/>
    <item
        android:id="@+id/action_blur"
        app:showAsAction="never"
        android:title="@string/action_blur"/>
    <item
        android:id="@+id/action_manuallyCornerSelect"
        app:showAsAction="never"
        android:title="@string/action_manuallyCornerSelect"/>
    <item
        android:id="@+id/action_autoCornerSelect"
        app:showAsAction="never"
        android:title="@string/action_autoCornerSelect"/>
    <item
        android:id="@+id/action_rotate90"
        app:showAsAction="never"
        android:title="@string/action_rotate90"/>
    <item
        android:id="@+id/action_rotate270"
        app:showAsAction="never"
        android:title="@string/action_rotate270"/>
    <item
        android:id="@+id/action_perspectiveTransform"
        app:showAsAction="never"
        android:title="@string/action_perspectiveTransform"/>
    <item
        android:id="@+id/action_resetFilters"
        app:showAsAction="never"
        android:title="@string/action_resetFilters"/>
</menu>